# RAG

./: pyproject.toml
data/CSV_files/: covid-19_dataset.csv
data/vector_store/: chroma.sqlite3
notebook/: document.ipynb
